--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Saul Goodman</h3>
+                  <h3>Rahul Shikhare</h3>
                   <h4>Ceo &amp; Founder</h4>
                 </div>
               </div>
@@ -189,7 +189,7 @@
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
+                  <h3>Pallavi Shikhare</h3>
                   <h4>Designer</h4>
                 </div>
               </div>
@@ -205,8 +205,8 @@
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <h3>Akash</h3>
+                  <h4>Photographer</h4>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -221,8 +221,8 @@
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
+                  <h3>Shubham Kadam</h3>
+                  <h4>Photographer</h4>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -237,8 +237,8 @@
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
+                  <h3>Pratik</h3>
+                  <h4>Developer</h4>
                 </div>
               </div>
             </div><!-- End testimonial item -->
