--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="1500">
+  <section id="hero"  class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="1500">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>Professional Photographer from India</h2>
+          <h2>Professional Photographer From India</h2>
           <p>Blanditiis praesentium aliquam illum tempore incidunt debitis dolorem magni est deserunt sed qui libero. Qui voluptas amet.</p>
           <!-- <a href="contact.html" class="btn-get-started">Available for hire</a> -->
         </div>
@@ -102,6 +102,9 @@
   </section><!-- End Hero Section -->
 
   <main id="main" data-aos="fade" data-aos-delay="1500">
+  
+    <main id="main">
+
 
     <!-- ======= Gallery Section ======= -->
     <section id="gallery" class="gallery">
