--- a/gallery.html
+++ b/gallery.html
@@ -108,6 +108,8 @@
     <!-- ======= Gallery Section ======= -->
     <section id="gallery" class="gallery">
       <div class="container-fluid">
+        
+        <div class="row gy-4 justify-content-center"> </div>
 
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
