--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
     <video width=100% height=100% autoplay muted loop controls preload="auto">
-      <source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
+      <source src="assets/img/video/Rahul.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 
@@ -108,8 +108,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <h2>Professional Photographer From India</h2>
-          <p>Blanditiis praesentium aliquam illum tempore incidunt debitis dolorem magni est deserunt sed qui libero.
-            Qui voluptas amet.</p>
+          <p>" We have the best wedding photographers in Satara ready at your service. All you need to do is give us a chance to capture and wrap all your wedding stories."</p>
           <!-- <a href="contact.html" class="btn-get-started">Available for hire</a> -->
         </div>
       </div>
